(Nit) Develop/Integrate/Manage/Monitor text is not left aligned. Fixes #578

--- a/AzureFunctions.Client/styles/sidebar.style.css
+++ b/AzureFunctions.Client/styles/sidebar.style.css
@@ -41,6 +41,10 @@
     color: #000;
 }
 
+.tab {
+    width: 13px;
+}
+
 .functions-list li span {
     display: block;
     padding: 10px;
